--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
